name:    HaskellGame
version: 0.0
synopsis : A haskell game
build-type : Simple
cabal-version: >= 1.2


executable haskellGame
    main-is: Main.hs
    ghc-options: -Wall
    build-depends: base >= 4.3.0.0,
                   SDL >= 0.6.4,        
                   SDL-image >= 0.6.1,           
                   SDL-gfx >= 0.6.0,
                   SDL-ttf == 0.6.2,
                   operational == 0.2.1.3,
                   containers == 0.5.4.0,
                   stm >= 2.2.0.1,                 
                   time == 1.4,
                   HUnit == 1.2.5.2

                   
executable haskellGameTest
    main-is: Tests/Test.hs
    ghc-options: -Wall                   


